src/compiler/generated/LanguageParser.py
# Generated from Language.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LanguageParser ( Parser ):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'fonc'", "'ret'", "'si'", "'sinon'", 
                     "'alors'", "'pour'", "'invoquer'", "'depuis'", "'suivre'", 
                     "'int'", "'bool'", "'char'", "'void'", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'='", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'<<'", "'>>'", 
                     "'||'", "'&&'", "'!'", "'|'", "'++'", "'--'", "'@'", 
                     "'?'", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", 
                     "','", "';'" ]

    symbolicNames = [ "<INVALID>", "FONC", "RET", "SI", "SINON", "ALORS", 
                      "POUR", "INVOQUER", "DEPUIS", "SUIVRE", "INT", "BOOL", 
                      "CHAR", "VOID", "BOOL_LITERAL", "PLUS", "MINUS", "MUL", 
                      "DIV", "MOD", "XOR", "ASSIGN", "EQ", "NEQ", "GT", 
                      "LT", "GE", "LE", "SHL", "SHR", "OR", "AND", "NOT", 
                      "BIT_OR", "INC", "DEC", "AT", "QUESTION", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "COLON", "COMMA", "SEMICOLON", "HEX_LITERAL", "INT_LITERAL", 
                      "STRING_LITERAL", "ID", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_importDecl = 2
    RULE_annotation = 3
    RULE_functionDecl = 4
    RULE_params = 5
    RULE_param = 6
    RULE_typeSpec = 7
    RULE_dType = 8
    RULE_pointer = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_varDecl = 12
    RULE_arrayDecl = 13
    RULE_arrayLiteral = 14
    RULE_assignment = 15
    RULE_indexedAssignment = 16
    RULE_ifStmt = 17
    RULE_whileStmt = 18
    RULE_forStmt = 19
    RULE_forInit = 20
    RULE_forUpdate = 21
    RULE_varDeclNoSemi = 22
    RULE_assignmentNoSemi = 23
    RULE_returnStmt = 24
    RULE_continueStmt = 25
    RULE_exprStmt = 26
    RULE_expr = 27
    RULE_logicalOrExpr = 28
    RULE_logicalAndExpr = 29
    RULE_bitwiseOrExpr = 30
    RULE_bitwiseXorExpr = 31
    RULE_equalityExpr = 32
    RULE_relationalExpr = 33
    RULE_shiftExpr = 34
    RULE_additiveExpr = 35
    RULE_multiplicativeExpr = 36
    RULE_unaryExpr = 37
    RULE_primaryExpr = 38
    RULE_functionCall = 39
    RULE_args = 40
    RULE_indexedAccess = 41
    RULE_incrementOp = 42

    ruleNames =  [ "program", "declaration", "importDecl", "annotation", 
                   "functionDecl", "params", "param", "typeSpec", "dType", 
                   "pointer", "block", "statement", "varDecl", "arrayDecl", 
                   "arrayLiteral", "assignment", "indexedAssignment", "ifStmt", 
                   "whileStmt", "forStmt", "forInit", "forUpdate", "varDeclNoSemi", 
                   "assignmentNoSemi", "returnStmt", "continueStmt", "exprStmt", 
                   "expr", "logicalOrExpr", "logicalAndExpr", "bitwiseOrExpr", 
                   "bitwiseXorExpr", "equalityExpr", "relationalExpr", "shiftExpr", 
                   "additiveExpr", "multiplicativeExpr", "unaryExpr", "primaryExpr", 
                   "functionCall", "args", "indexedAccess", "incrementOp" ]

    EOF = Token.EOF
    FONC=1
    RET=2
    SI=3
    SINON=4
    ALORS=5
    POUR=6
    INVOQUER=7
    DEPUIS=8
    SUIVRE=9
    INT=10
    BOOL=11
    CHAR=12
    VOID=13
    BOOL_LITERAL=14
    PLUS=15
    MINUS=16
    MUL=17
    DIV=18
    MOD=19
    XOR=20
    ASSIGN=21
    EQ=22
    NEQ=23
    GT=24
    LT=25
    GE=26
    LE=27
    SHL=28
    SHR=29
    OR=30
    AND=31
    NOT=32
    BIT_OR=33
    INC=34
    DEC=35
    AT=36
    QUESTION=37
    LPAREN=38
    RPAREN=39
    LBRACE=40
    RBRACE=41
    LBRACK=42
    RBRACK=43
    COLON=44
    COMMA=45
    SEMICOLON=46
    HEX_LITERAL=47
    INT_LITERAL=48
    STRING_LITERAL=49
    ID=50
    BLOCK_COMMENT=51
    LINE_COMMENT=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LanguageParser.EOF, 0)

        def importDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ImportDeclContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ImportDeclContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(LanguageParser.DeclarationContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 86
                self.importDecl()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4535485464578) != 0):
                self.state = 92
                self.declaration()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(LanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(LanguageParser.FunctionDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(LanguageParser.VarDeclContext,0)


        def arrayDecl(self):
            return self.getTypedRuleContext(LanguageParser.ArrayDeclContext,0)


        def annotation(self):
            return self.getTypedRuleContext(LanguageParser.AnnotationContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = LanguageParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.functionDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.varDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.arrayDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.annotation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INVOQUER(self):
            return self.getToken(LanguageParser.INVOQUER, 0)

        def STRING_LITERAL(self):
            return self.getToken(LanguageParser.STRING_LITERAL, 0)

        def SEMICOLON(self):
            return self.getToken(LanguageParser.SEMICOLON, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def DEPUIS(self):
            return self.getToken(LanguageParser.DEPUIS, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_importDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDecl" ):
                listener.enterImportDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDecl" ):
                listener.exitImportDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDecl" ):
                return visitor.visitImportDecl(self)
            else:
                return visitor.visitChildren(self)




    def importDecl(self):

        localctx = LanguageParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(LanguageParser.INVOQUER)
                self.state = 107
                self.match(LanguageParser.STRING_LITERAL)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 108
                    self.match(LanguageParser.SEMICOLON)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(LanguageParser.INVOQUER)
                self.state = 112
                self.match(LanguageParser.ID)
                self.state = 113
                self.match(LanguageParser.DEPUIS)
                self.state = 114
                self.match(LanguageParser.STRING_LITERAL)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 115
                    self.match(LanguageParser.SEMICOLON)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION(self):
            return self.getToken(LanguageParser.QUESTION, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_annotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnnotation" ):
                listener.enterAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnnotation" ):
                listener.exitAnnotation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnnotation" ):
                return visitor.visitAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def annotation(self):

        localctx = LanguageParser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_annotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(LanguageParser.QUESTION)
            self.state = 121
            self.match(LanguageParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FONC(self):
            return self.getToken(LanguageParser.FONC, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(LanguageParser.TypeSpecContext,0)


        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(LanguageParser.ParamsContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = LanguageParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(LanguageParser.FONC)
            self.state = 124
            self.typeSpec()
            self.state = 125
            self.match(LanguageParser.ID)
            self.state = 126
            self.match(LanguageParser.LPAREN)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 127
                self.params()


            self.state = 130
            self.match(LanguageParser.RPAREN)
            self.state = 131
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ParamContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.COMMA)
            else:
                return self.getToken(LanguageParser.COMMA, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = LanguageParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.param()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 134
                self.match(LanguageParser.COMMA)
                self.state = 135
                self.param()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpec(self):
            return self.getTypedRuleContext(LanguageParser.TypeSpecContext,0)


        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def pointer(self):
            return self.getTypedRuleContext(LanguageParser.PointerContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = LanguageParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.typeSpec()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 142
                self.pointer()


            self.state = 145
            self.match(LanguageParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(LanguageParser.LBRACK, 0)

        def dType(self):
            return self.getTypedRuleContext(LanguageParser.DTypeContext,0)


        def RBRACK(self):
            return self.getToken(LanguageParser.RBRACK, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_typeSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpec" ):
                listener.enterTypeSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpec" ):
                listener.exitTypeSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpec" ):
                return visitor.visitTypeSpec(self)
            else:
                return visitor.visitChildren(self)




    def typeSpec(self):

        localctx = LanguageParser.TypeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(LanguageParser.LBRACK)
            self.state = 148
            self.dType()
            self.state = 149
            self.match(LanguageParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(LanguageParser.INT, 0)

        def BOOL(self):
            return self.getToken(LanguageParser.BOOL, 0)

        def CHAR(self):
            return self.getToken(LanguageParser.CHAR, 0)

        def VOID(self):
            return self.getToken(LanguageParser.VOID, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_dType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDType" ):
                listener.enterDType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDType" ):
                listener.exitDType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDType" ):
                return visitor.visitDType(self)
            else:
                return visitor.visitChildren(self)




    def dType(self):

        localctx = LanguageParser.DTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUL(self):
            return self.getToken(LanguageParser.MUL, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_pointer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointer" ):
                listener.enterPointer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointer" ):
                listener.exitPointer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer" ):
                return visitor.visitPointer(self)
            else:
                return visitor.visitChildren(self)




    def pointer(self):

        localctx = LanguageParser.PointerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pointer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(LanguageParser.MUL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(LanguageParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LanguageParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(LanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LanguageParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(LanguageParser.LBRACE)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2116976495379052) != 0):
                self.state = 156
                self.statement()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(LanguageParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(LanguageParser.VarDeclContext,0)


        def arrayDecl(self):
            return self.getTypedRuleContext(LanguageParser.ArrayDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(LanguageParser.AssignmentContext,0)


        def indexedAssignment(self):
            return self.getTypedRuleContext(LanguageParser.IndexedAssignmentContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(LanguageParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(LanguageParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(LanguageParser.ForStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(LanguageParser.ReturnStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(LanguageParser.ContinueStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(LanguageParser.ExprStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext,0)


        def annotation(self):
            return self.getTypedRuleContext(LanguageParser.AnnotationContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.arrayDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.assignment()
                pass
